Swagger almost done
