# schemas/UserValidationSchema.js
@@ -2,7 +2,7 @@ const joi = require('joi');
 
 const CreateUser = joi.object({
     email: joi.string().email().required(),
-    package: joi.string().required(),
+    password: joi.string().required(),
 });
 
 module.exports = {
